--- a/drivers/iommu/Kconfig
+++ b/drivers/iommu/Kconfig
@@ -387,6 +387,7 @@ config VIRTIO_IOMMU
 	select IOMMU_API
 	select IOMMU_DMA if X86
 	select INTERVAL_TREE
+	select ACPI_VIOT if ACPI
 	help
 	  Para-virtualised IOMMU driver with virtio.
 
@@ -406,5 +407,9 @@ config VIRTIO_IOMMU_TOPOLOGY
 	  topology description.
 
 	  Say Y here if you intend to run this kernel as a guest.
+
+config ACPI_VIOT
+	bool
+	select VIRTIO_IOMMU_TOPOLOGY_HELPERS
 
 endif # IOMMU_SUPPORT
